--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -5,6 +5,8 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 80,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": true,
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf"
