--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,19 @@ anyio==4.9.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.2
+curl_cffi==0.10.0
+cycler==0.12.1
+DateTime==5.5
+Deprecated==1.2.18
 distro==1.9.0
 Flask==3.1.0
 flask-cors==5.0.1
+fonttools==4.58.0
 frozendict==2.4.6
 h11==0.14.0
 httpcore==1.0.7
@@ -17,20 +24,30 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.3
+multipledispatch==1.0.0
 multitasking==0.0.11
 numpy==2.2.4
 openai==1.70.0
+packaging==25.0
 pandas==2.2.3
 peewee==3.17.9
+pillow==11.2.1
 platformdirs==4.3.7
+protobuf==6.30.2
+pycparser==2.22
 pydantic==2.11.2
 pydantic_core==2.33.1
+pykrx==1.0.48
 PyMuPDF==1.25.5
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 requests==2.32.3
+setuptools==80.4.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -39,5 +56,9 @@ typing-inspection==0.4.0
 typing_extensions==4.13.1
 tzdata==2025.2
 urllib3==2.3.0
+websockets==15.0.1
 Werkzeug==3.1.3
-yfinance==0.2.55
+wrapt==1.17.2
+xlrd==2.0.1
+yfinance==0.2.61
+zope.interface==7.2
